Allow access to jdk.internal.vm.annotations